--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/doctest"]
 	path = external/doctest
 	url = https://github.com/onqtam/doctest.git
+[submodule "external/hat-trie"]
+	path = external/hat-trie
+	url = https://github.com/Tessil/hat-trie
